--- a/broker/package.json
+++ b/broker/package.json
@@ -1,51 +1,45 @@
 {
-  "name": "communication-server",
+  "name": "web",
   "version": "1.0.0",
-  "description": "The server is used to making communication between Raspberry PI and Web application",
-  "main": "src/index.ts",
+  "description": "This web client is used to user management on a specific raspberry pi device",
+  "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
+    "type-check": "tsc",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bsekachev/nnstu-project.git"
   },
   "author": "Boris Sekachev",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bsekachev/nnstu-project/issues"
+  "dependencies": {
+    "@types/antd": "^1.0.0",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux": "^3.6.0",
+    "antd": "^4.0.0",
+    "postcss-loader": "^3.0.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "sass-loader": "^8.0.2"
   },
-  "homepage": "https://github.com/bsekachev/nnstu-project#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "babel-loader": "^8.0.6",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ],
-      "@babel/preset-typescript"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties"
-    ]
-  },
-  "dependencies": {
-    "@types/winston": "^2.4.4",
-    "@types/ws": "^7.2.0",
-    "winston": "^3.2.1",
-    "ws": "^7.2.1"
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.1",
+    "postcss-preset-env": "^6.7.0",
+    "style-loader": "^1.1.3",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
